# Zslicy

./: .gitignore  CMakeLists.txt  README.md  a.out  b.out  b.stl  common.h  key  key.pub  main.cpp  point.h  temp.cpp  test.cpp
include/lib/: common.h  fileParser.h
src/: common.h  fileParser.h  main.cpp
src/lib/: common.cpp  fileParser.cpp  superImposer.cpp
src/objs/: coord.cpp  facet.cpp  facet.h  point.h  slice.cpp
test/: testMain.cpp
test/lib/: testSuperImposer.cpp
